--- a/conf/desktop/etc/hypr/hyprland.conf
+++ b/conf/desktop/etc/hypr/hyprland.conf
@@ -2,6 +2,7 @@
 exec-once = systemctl --user import-environment DISPLAY WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = dbus-update-activation-environment --systemd DISPLAY WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = systemctl --user start hyprland-session.target
+exec-once = waybar
 
 monitor = , preferred, auto, 1
 
@@ -100,6 +101,7 @@ bind = $hyper, d,                   exec, cgtoggle rofi -modi drun -show drun
 bind = $hyper, p,                   exec, wl-clipboard-manager lock; cglaunch passmenu -p pass; wl-clipboard-manager unlock
 bind = $win,   p,                   exec, cgtoggle pass-gen
 bind = $hyper, m,                   exec, cgtoggle udiskie-dmenu
+bind = $hyper, n,                   exec, cgtoggle rofi-nmcli
 bind = $win,   grave,               exec, cgtoggle wl-clipboard-manager dmenu
 bind = $hyper, Backspace,           exec, cgtoggle emoji-dmenu
 bind = $hyper, XF86MonBrightnessUp, exec, cgtoggle emoji-dmenu
