Hyprland config updates

--- a/conf/desktop/etc/hypr/hyprland.conf
+++ b/conf/desktop/etc/hypr/hyprland.conf
@@ -65,8 +65,8 @@ master {
 
 # Window configuration
 windowrulev2 = workspace 2, class:^Vivaldi-stable$
-windowrulev2 = workspace 3, class:^scli$
-windowrulev2 = workspace 4, class:^neomutt$
+windowrulev2 = workspace 3, class:^IDA$
+windowrulev2 = workspace 3, class:^ghidra-Ghidra$
 
 windowrulev2 = float, class:^dmenu
 windowrulev2 = size 60% 70%, class:^dmenu
@@ -98,7 +98,7 @@ bind = $win$shift, Return,                exec, kitty --config NONE -e /bin/bash
 # Launcher
 bind = $hyper, equal,               exec, cgtoggle qalculate-gtk
 bind = $hyper, d,                   exec, cgtoggle rofi -modi drun -show drun
-bind = $hyper, p,                   exec, wl-clipboard-manager lock; cglaunch passmenu -p pass; wl-clipboard-manager unlock
+bind = $hyper, p,                   exec, wl-clipboard-manager lock; cglaunch rofi-pass -p pass; wl-clipboard-manager unlock
 bind = $win,   p,                   exec, cgtoggle pass-gen
 bind = $hyper, m,                   exec, cgtoggle udiskie-dmenu
 bind = $hyper, n,                   exec, cgtoggle rofi-nmcli
@@ -107,8 +107,8 @@ bind = $hyper, Backspace,           exec, cgtoggle emoji-dmenu
 bind = $hyper, XF86MonBrightnessUp, exec, cgtoggle emoji-dmenu
 
 # Screen recording
-bind = ,       XF86Search, exec, cglaunch screenshot-area
-bind = $hyper, XF86Search, exec, cglaunch record-area
+bind = ,       Print, exec, cglaunch screenshot-area
+bind = $hyper, Print, exec, cglaunch record-area
 
 # Kill focused window
 bind = $win, q, killactive
