--- a/pkg/PKGBUILD
+++ b/pkg/PKGBUILD
@@ -1,7 +1,7 @@
 pkgbase='couldinho'
 pkgname=(couldinho-base couldinho-desktop couldinho-laptop couldinho-dev couldinho-sec couldinho-vmware couldinho-media-server couldinho-media-client)
 pkgver=3
-pkgrel=104
+pkgrel=105
 pkgdesc="Packages for couldinho systems"
 arch=(x86_64)
 url="https://github.com/kontax/arch-packages"
@@ -185,6 +185,7 @@ package_couldinho-base() {
     depends+=(
         pass                # Text-based password manager
         pass-git-helper     # Credential helper using pass to store details
+        python-pyxdg        # Python library for using XDG
         pwgen               # Password generator
         usbguard            # USB security configuration
         yubikey-manager     # Yubikey settings
