--- a/conf/desktop/etc/hypr/hyprland.conf
+++ b/conf/desktop/etc/hypr/hyprland.conf
@@ -262,3 +262,6 @@ bindl = , switch:off:Apple SMC power/lid events, dpms, on
 
 # Autostart
 exec = cggrep swaybg    || cglaunch swaybg -c "##1a1c1c" -m solid_color
+
+# Additional configuration
+source = /etc/hypr/extra.conf
