--- a/pkg/PKGBUILD
+++ b/pkg/PKGBUILD
@@ -1,7 +1,7 @@
 pkgbase='couldinho'
 pkgname=(couldinho-base couldinho-desktop couldinho-laptop couldinho-dev couldinho-sec couldinho-vmware couldinho-media-server couldinho-media-client)
 pkgver=3
-pkgrel=106
+pkgrel=107
 pkgdesc="Packages for couldinho systems"
 arch=(x86_64)
 url="https://github.com/kontax/arch-packages"
@@ -266,7 +266,7 @@ package_couldinho-desktop() {
 
     install -Dm 0644 desktop/etc/hypr/hyprland.conf \
         "$pkgdir/etc/hypr/hyprland.conf"
-    install -Dm 0644 desktop/etc/hypr/hyprland.conf \
+    install -Dm 0644 desktop/etc/hypr/extra.conf \
         "$pkgdir/etc/hypr/couldinho-extra.conf"
     install -Dm 0644 desktop/usr/share/fonts/taskbar.ttf \
         "$pkgdir/usr/share/fonts/taskbar.ttf"
@@ -578,7 +578,7 @@ package_couldinho-laptop() {
     install -Dm 0644 laptop/etc/bluetooth/main.conf "$pkgdir/etc/bluetooth/couldinho-laptop-main.conf"
     install -Dm 0644 laptop/etc/sway/config.patch "$pkgdir/etc/sway/config.patch"
     install -Dm 0755 laptop/usr/local/bin/rofi-bluetooth "$pkgdir/usr/local/bin/rofi-bluetooth"
-    install -Dm 0644 laptop/etc/hypr/hyprland.conf "$pkgdir/etc/hypr/couldinho-extra.conf"
+    install -Dm 0644 laptop/etc/hypr/extra.conf "$pkgdir/etc/hypr/couldinho-extra.conf"
 }
 
 package_couldinho-vmware() {
