Split out some laptop-only hyprland functions into extra.conf

--- a/conf/laptop/etc/hypr/extra.conf
+++ b/conf/laptop/etc/hypr/extra.conf
@@ -1,1 +1,22 @@
 monitor = , preferred, auto, 1.6
+
+# Brightness control
+binde = ,       XF86MonBrightnessUp,   exec, light -A 1%
+binde = ,       XF86MonBrightnessDown, exec, light -U 1%
+binde = $shift, XF86MonBrightnessUp,   exec, light -A 5%
+binde = $shift, XF86MonBrightnessDown, exec, light -U 5%
+binde = $win,   XF86MonBrightnessUp,   exec, light -s sysfs/leds/kbd_backlight -A 5%
+binde = $win,   XF86MonBrightnessDown, exec, light -s sysfs/leds/kbd_backlight -U 5%
+
+# Media control
+bindl = ,       XF86AudioPlay, exec, playerctl --player playerctld play-pause
+bindl = ,       XF86AudioNext, exec, playerctl --player playerctld next
+bindl = ,       XF86AudioPrev, exec, playerctl --player playerctld previous
+bindl  = ,      XF86AudioMute,        exec, audio output-mute
+bindle = ,      XF86AudioRaiseVolume, exec, audio output-volume-up
+bindle = ,      XF86AudioLowerVolume, exec, audio output-volume-down
+
+# Turn display off when lid is closed
+bindl = , switch:on:Apple SMC power/lid events,  dpms, off
+bindl = , switch:on:Apple SMC power/lid events,  exec, light -s sysfs/leds/kbd_backlight -S 0%
+bindl = , switch:off:Apple SMC power/lid events, dpms, on
