Update hyprland-autoname-workspaces systemd service

--- a/conf/desktop/etc/systemd/user/hyprland-autoname-workspaces.service
+++ b/conf/desktop/etc/systemd/user/hyprland-autoname-workspaces.service
@@ -4,7 +4,7 @@ PartOf=graphical-session.target
 After=graphical-session.target
 
 [Service]
-ExecStart=/usr/bin/hyprland-autoname-workspaces
+ExecStart=/usr/bin/hyprland-autoname-workspaces -c /etc/hypr/autoname-workspaces.conf
 Restart=always
 RestartSec=10s
 
