--- a/pkg/PKGBUILD
+++ b/pkg/PKGBUILD
@@ -1,7 +1,7 @@
 pkgbase='couldinho'
 pkgname=(couldinho-base couldinho-desktop couldinho-laptop couldinho-dev couldinho-sec couldinho-vmware couldinho-media-server couldinho-media-client)
 pkgver=4
-pkgrel=5
+pkgrel=6
 pkgdesc="Packages for couldinho systems"
 arch=(x86_64)
 url="https://github.com/kontax/arch-packages"
@@ -633,6 +633,7 @@ package_couldinho-media-server() {
         radarr
         readarr-develop
         calibre
+        calibre-web
         transmission-cli
         organizr-git
     )
