--- a/pkg/PKGBUILD
+++ b/pkg/PKGBUILD
@@ -1,7 +1,7 @@
 pkgbase='couldinho'
 pkgname=(couldinho-base couldinho-desktop couldinho-laptop couldinho-dev couldinho-sec couldinho-vmware couldinho-media-server couldinho-media-client)
 pkgver=4
-pkgrel=8
+pkgrel=9
 pkgdesc="Packages for couldinho systems"
 arch=(x86_64)
 url="https://github.com/kontax/arch-packages"
@@ -368,6 +368,7 @@ package_couldinho-desktop() {
     depends+=(
         zathura                 # PDF viewer with vim bindings
         zathura-pdf-mupdf       # MuPDF plugin for zathura
+        anki                    # Flashcard tool
     )
 
     # Terminal + desktop tools
