--- a/pkg/PKGBUILD
+++ b/pkg/PKGBUILD
@@ -1,7 +1,7 @@
 pkgbase='couldinho'
 pkgname=(couldinho-base couldinho-desktop couldinho-laptop couldinho-dev couldinho-sec couldinho-vmware couldinho-media-server couldinho-media-client)
 pkgver=4
-pkgrel=12
+pkgrel=13
 pkgdesc="Packages for couldinho systems"
 arch=(x86_64)
 url="https://github.com/kontax/arch-packages"
@@ -313,6 +313,8 @@ package_couldinho-desktop() {
         "$pkgdir/usr/local/share/applications/signal-desktop.desktop"
     install -Dm 0644 desktop/usr/local/share/applications/visidata.desktop \
         "$pkgdir/usr/local/share/applications/visidata.desktop"
+    install -Dm 0644 desktop/usr/local/share/applications/vivaldi-stable \
+        "$pkgdir/usr/local/share/applications/vivaldi-stable.desktop"
 
     # Further desktop packages
     depends+=(
