--- a/pkg/PKGBUILD
+++ b/pkg/PKGBUILD
@@ -1,7 +1,7 @@
 pkgbase='couldinho'
 pkgname=(couldinho-base couldinho-desktop couldinho-laptop couldinho-dev couldinho-sec couldinho-vmware couldinho-media-server couldinho-media-client)
 pkgver=4
-pkgrel=13
+pkgrel=14
 pkgdesc="Packages for couldinho systems"
 arch=(x86_64)
 url="https://github.com/kontax/arch-packages"
@@ -120,7 +120,7 @@ package_couldinho-base() {
 
     # Base replacements
     depends+=(
-        exa                 # ls replacement
+        eza                 # ls replacement
         ripgrep             # Fuzzy search
         ripgrep-all         # ripgrep wrapper for multiple file types
         rmtrash             # Delete to bin
