--- a/conf/desktop/etc/hypr/autoname-workspaces.conf
+++ b/conf/desktop/etc/hypr/autoname-workspaces.conf
@@ -1,37 +1,77 @@
-[icons]
-"calibre-gui" = ""
-"chromium" = ""
-"code-oss" = ""
-"discord" = ""
-"dmenu" = ""
-"dmenu-browser" = ""
-"dmenu-clipboard" = ""
-"dmenu-emoji" = ""
-"dmenu-pass" = ""
-"dmenu-pass generator" = ""
-"draw.io" = ""
-"firefox" = ""
-"kak" = ""
-"kitty" = ""
-"krita" = ""
-"libreoffice-calc" = ""
-"libreoffice-writer" = ""
-"mpv" = ""
-"nemo" = ""
-"neomutt" = ""
-"org.pwmt.zathura" = ""
-"org.qutebrowser.qutebrowser" = ""
-"paperwork" = ""
-"pavucontrol" = ""
-"peek" = ""
-"qalculate-gtk" = ""
-"qutepreview" = ""
-"scli" = ""
-"swappy" = ""
-"transmission-gtk" = ""
-"vimiv" = ""
-"virt-manager" = ""
-"xplr" = ""
-"Vivaldi-stable" = ""
+version = "1.1.3"
 
-"DEFAULT" = ""
+[class]
+libreoffice-calc = ""
+mpv = ""
+"dmenu-pass generator" = ""
+qalculate-gtk = ""
+transmission-gtk = ""
+xplr = ""
+dmenu-browser = ""
+dmenu-clipboard = ""
+calibre-gui = ""
+chromium = ""
+discord = ""
+"draw.io" = ""
+virt-manager = ""
+neomutt = ""
+pavucontrol = ""
+swappy = ""
+vimiv = ""
+scli = ""
+"org.qutebrowser.qutebrowser" = ""
+libreoffice-writer = ""
+kak = ""
+nemo = ""
+"org.pwmt.zathura" = ""
+dmenu-pass = ""
+paperwork = ""
+Vivaldi-stable = ""
+peek = ""
+dmenu = ""
+krita = ""
+qutepreview = ""
+kitty = ""
+code-oss = ""
+DEFAULT = ""
+firefox = ""
+dmenu-emoji = ""
+
+[class_active]
+
+[initial_class]
+
+[initial_class_active]
+
+[workspaces_name]
+
+[title_in_class]
+
+[title_in_class_active]
+
+[title_in_initial_class]
+
+[title_in_initial_class_active]
+
+[initial_title_in_class]
+
+[initial_title_in_class_active]
+
+[initial_title_in_initial_class]
+
+[initial_title_in_initial_class_active]
+
+[exclude]
+
+[format]
+dedup = false
+dedup_inactive_fullscreen = false
+delim = " "
+workspace = "{id}:{delim}{clients}"
+workspace_empty = "{id}"
+client = "{icon}"
+client_fullscreen = "[{icon}]"
+client_active = "*{icon}*"
+client_dup = "{icon}{counter_sup}"
+client_dup_active = "*{icon}*{delim}{icon}{counter_unfocused_sup}"
+client_dup_fullscreen = "[{icon}]{delim}{icon}{counter_unfocused_sup}"
