--- a/pkg/PKGBUILD
+++ b/pkg/PKGBUILD
@@ -1,7 +1,7 @@
 pkgbase='couldinho'
 pkgname=(couldinho-base couldinho-desktop couldinho-laptop couldinho-dev couldinho-sec couldinho-vmware couldinho-media-server couldinho-media-client)
 pkgver=4
-pkgrel=17
+pkgrel=18
 pkgdesc="Packages for couldinho systems"
 arch=(x86_64)
 url="https://github.com/kontax/arch-packages"
@@ -477,6 +477,11 @@ package_couldinho-dev() {
         aws-cli-v2              # Command line interface to AWS
         aws-sam-cli             # Client for AWS SAM serverless
         npm                     # Node package manager (used for serverless)
+    )
+
+    # Android
+    depends+=(
+        android-studio          # Android development platform
     )
 }
 
