--- a/pkg/PKGBUILD
+++ b/pkg/PKGBUILD
@@ -1,7 +1,7 @@
 pkgbase='couldinho'
 pkgname=(couldinho-base couldinho-desktop couldinho-laptop couldinho-dev couldinho-sec couldinho-vmware couldinho-xcp-ng)
 pkgver=4
-pkgrel=21
+pkgrel=22
 pkgdesc="Packages for couldinho systems"
 arch=(x86_64)
 url="https://github.com/kontax/arch-packages"
@@ -628,5 +628,7 @@ package_couldinho-xcp-ng() {
         couldinho-base
     )
 
-    xe-guest-utilities-xcp-ng   # XenServer guest tools for XCP-NG
+    depends+=(
+        xe-guest-utilities-xcp-ng   # XenServer guest tools for XCP-NG
+    )
 }
