--- a/pkg/PKGBUILD
+++ b/pkg/PKGBUILD
@@ -84,12 +84,6 @@ package_couldinho-base() {
         systemd
     )
 
-    install -Dm 0644 base/etc/pacman.conf "$pkgdir/etc/couldinho-pacman.conf"
-    install -Dm 0644 base/etc/pacman.d/couldinho-arch-aur "$pkgdir/etc/pacman.d/couldinho-arch-aur"
-    install -Dm 0400 base/etc/sudoers "$pkgdir/etc/couldinho-sudoers"
-    install -Dm 0644 base/etc/vimrc "$pkgdir/etc/couldinho-vimrc"
-    install -Dm 0644 base/etc/xkb/symbols/us-hyper "$pkgdir/etc/xkb/symbols/us-hyper"
-
     # Boot and base progs
     depends+=(
         cryptboot           # Encrypted partitions
@@ -108,16 +102,6 @@ package_couldinho-base() {
         npm                 # Node package manager
     )
 
-    install -Dm 0644 base/etc/gitconfig "$pkgdir/etc/gitconfig"
-    install -Dm 0644 base/etc/xdg/nvim/init.vim "$pkgdir/etc/xdg/nvim/init.vim"
-    install -Dm 0644 base/etc/xdg/nvim/bootstrap.vim \
-        "$pkgdir/etc/xdg/nvim/bootstrap.vim"
-    install -Dm 0644 base/etc/xdg/nvim/plugins.vim \
-        "$pkgdir/etc/xdg/nvim/plugins.vim"
-    install -dm 0775 "$pkgdir/etc/xdg/nvim/autoload"
-    cp -r base/etc/xdg/nvim/modules "$pkgdir/etc/xdg/nvim/modules"
-    cp -r base/etc/xdg/nvim/config "$pkgdir/etc/xdg/nvim/config"
-
     # Base replacements
     depends+=(
         eza                 # ls replacement
@@ -127,9 +111,6 @@ package_couldinho-base() {
         bat                 # Cat replacement with syntax highlighting
         htop                # Improved top - process viewer
     )
-
-    install -dm 0755 base/etc/bat "$pkgdir/etc/bat"
-    install -Dm 0644 base/etc/htoprc "$pkgdir/etc/htoprc"
 
     # Networking + VPN
     depends+=(
@@ -160,12 +141,6 @@ package_couldinho-base() {
         bash-completion     # Auto-complete for bash
         git-delta           # Diff tool
     )
-
-    install -Dm 0644 base/etc/zsh/zshrc "$pkgdir/etc/zsh/couldinho-zshrc"
-    install -Dm 0644 base/etc/zsh/p10k.zsh "$pkgdir/etc/zsh/couldinho-p10k.zsh"
-    install -Dm 0644 base/etc/zsh/zprofile "$pkgdir/etc/zsh/couldinho-zprofile"
-    install -Dm 0644 base/etc/zsh/zsh-aliases "$pkgdir/etc/zsh/couldinho-zsh-aliases"
-    install -Dm 0644 base/etc/zsh/zshenv "$pkgdir/etc/zsh/couldinho-zshenv"
 
     # Filesystem
     depends+=(
@@ -216,6 +191,18 @@ package_couldinho-base() {
         rebuild-detector    # Check which packages need to be rebuilt
     )
 
+    install -Dm 0644 base/etc/systemd/system/reflector.service "$pkgdir/etc/systemd/system/reflector.service"
+    install -Dm 0644 base/etc/systemd/system/reflector.timer "$pkgdir/etc/systemd/system/reflector.timer"
+
+    # Environment
+    install -Dm 0644 base/etc/environment.d/10-locale.conf "$pkgdir/etc/environment.d/10-locale.conf"
+    install -Dm 0644 base/etc/environment.d/30-path.conf "$pkgdir/etc/environment.d/30-path.conf"
+    install -Dm 0644 base/etc/environment.d/40-clean-home.conf "$pkgdir/etc/environment.d/40-clean-home.conf"
+    install -Dm 0644 base/etc/environment.d/50-progs.conf "$pkgdir/etc/environment.d/50-progs.conf"
+    install -Dm 0644 base/etc/environment.d/90-pass.conf "$pkgdir/etc/environment.d/90-pass.conf"
+
+    # Binaries
+    install -Dm 0755 base/usr/local/bin/vimdiff "$pkgdir/usr/local/bin/vimdiff"
 }
 
 package_couldinho-desktop() {
