--- a/pkg/PKGBUILD
+++ b/pkg/PKGBUILD
@@ -84,6 +84,7 @@ package_couldinho-base() {
         systemd
     )
 
+    install -Dm 0644 base/etc/pacman.conf "$pkgdir/etc/couldinho-pacman.conf"
     install -Dm 0400 base/etc/sudoers "$pkgdir/etc/couldinho-sudoers"
     install -Dm 0644 base/etc/vimrc "$pkgdir/etc/couldinho-vimrc"
     install -Dm 0644 base/etc/xkb/symbols/us-hyper "$pkgdir/etc/xkb/symbols/us-hyper"
