Update hyprland cursor config

--- a/conf/desktop/etc/hypr/hyprland.conf
+++ b/conf/desktop/etc/hypr/hyprland.conf
@@ -37,9 +37,11 @@ general {
     gaps_out = 5
 
     layout = master
+}
 
-    cursor_inactive_timeout = 10
-    no_cursor_warps = true
+cursor {
+    inactive_timeout = 10
+    no_warps = true
 }
 
 decoration {
