--- a/pkg/PKGBUILD
+++ b/pkg/PKGBUILD
@@ -1,7 +1,7 @@
 pkgbase='couldinho'
 pkgname=(couldinho-base couldinho-desktop couldinho-laptop couldinho-dev couldinho-sec couldinho-vmware couldinho-xcp-ng)
-pkgver=4
-pkgrel=22
+pkgver=5
+pkgrel=0
 pkgdesc="Packages for couldinho systems"
 arch=(x86_64)
 url="https://github.com/kontax/arch-packages"
@@ -248,11 +248,10 @@ package_couldinho-desktop() {
     install -Dm 0644 desktop/etc/X11/xorg.conf.d/00-keyboard.conf \
                     "$pkgdir/etc/X11/xorg.conf.d/00-keyboard.conf"
 
-    # hyprland
+    # sway
     depends+=(
-        hyprland                # Tiling wayland compositor replacing i3/sway
+        sway                    # Tiling wayland compositor replacing i3/sway
         waybar                  # Sway bar for wayland
-        hyprland-autoname-workspaces-git    # Auto-name hyprland workspaces
         swayidle                # Idle management system for sway
         swaylock-effects        # Lock wayland screen with added effects
         wl-clipboard            # Wayland command-line clipboard manager
@@ -261,20 +260,17 @@ package_couldinho-desktop() {
         swaync                  # Sway notification daemon
         libnotify               # Desktop notification library
         rofi                    # Launcher
+        swayr                   # Window switcher for sway
     )
 
-    install -Dm 0644 desktop/etc/hypr/hyprland.conf \
-        "$pkgdir/etc/hypr/hyprland.conf"
+    install -Dm 0644 desktop/etc/sway/config \
+        "$pkgdir/etc/sway/couldinho-desktop-config"
     install -Dm 0644 desktop/etc/swaylock/config \
         "$pkgdir/etc/swaylock/config"
     install -Dm 0644 desktop/etc/systemd/user/swayidle.service \
         "$pkgdir/etc/systemd/user/swayidle.service"
     install -Dm 0644 desktop/etc/hypr/autoname-workspaces.conf \
         "$pkgdir/etc/hypr/autoname-workspaces.conf"
-    install -Dm 0644 desktop/etc/systemd/user/hyprland-autoname-workspaces.service \
-        "$pkgdir/etc/systemd/user/hyprland-autoname-workspaces.service"
-    install -Dm 0644 desktop/etc/systemd/user/hyprland-session.target \
-        "$pkgdir/etc/systemd/user/hyprland-session.target"
     install -Dm 0644 desktop/etc/hypr/extra.conf \
         "$pkgdir/etc/hypr/couldinho-desktop-extra.conf"
     install -Dm 0644 desktop/usr/share/fonts/taskbar.ttf \
@@ -317,6 +313,7 @@ package_couldinho-desktop() {
 
     # Further desktop packages
     depends+=(
+        flashfocus-git              # Focus animations
         qalculate-gtk               # Calculator
         ttf-inconsolata             # Font for terminal and status etc.
         otf-font-awesome            # Font with icons
@@ -334,6 +331,16 @@ package_couldinho-desktop() {
 
     install -Dm 0644 desktop/etc/gtk-3.0/settings.ini \
         "$pkgdir/etc/gtk-3.0/settings.ini"
+    install -Dm 0644 desktop/etc/xdg/flashfocus/flashfocus.yml \
+        "$pkgdir/etc/xdg/flashfocus/couldinho-desktop-flashfocus.yml"
+    install -Dm 0644 desktop/etc/systemd/user/sway-autoname-workspaces.service \
+        "$pkgdir/etc/systemd/user/sway-autoname-workspaces.service"
+    install -Dm 0644 desktop/etc/systemd/user/sway-inactive-window-transparency.service \
+        "$pkgdir/etc/systemd/user/sway-inactive-window-transparency.service"
+    install -Dm 0644 desktop/etc/systemd/user/sway-session.target \
+        "$pkgdir/etc/systemd/user/sway-session.target"
+    install -Dm 0644 desktop/etc/systemd/user/swayr.service \
+        "$pkgdir/etc/systemd/user/swayr.service"
     install -Dm 0644 desktop/etc/systemd/user/systembus-notify.service \
         "$pkgdir/etc/systemd/user/systembus-notify.service"
     install -Dm 0644 desktop/etc/systemd/user/waybar-updates.service \
@@ -430,6 +437,13 @@ package_couldinho-desktop() {
     install -Dm 0755 desktop/usr/local/bin/waybar-usbguard "$pkgdir/usr/local/bin/waybar-usbguard"
     install -Dm 0755 desktop/usr/local/bin/waybar-vpn "$pkgdir/usr/local/bin/waybar-vpn"
     install -Dm 0755 desktop/usr/local/bin/waybar-yubikey "$pkgdir/usr/local/bin/waybar-yubikey"
+    install -Dm 0755 desktop/usr/local/bin/sway-audio "$pkgdir/usr/local/bin/sway-audio"
+    install -Dm 0755 desktop/usr/local/bin/sway-autoname-workspaces "$pkgdir/usr/local/bin/sway-autoname-workspaces"
+    install -Dm 0755 desktop/usr/local/bin/sway-exit "$pkgdir/usr/local/bin/sway-exit"
+    install -Dm 0755 desktop/usr/local/bin/sway-gif-area "$pkgdir/usr/local/bin/sway-gif-area"
+    install -Dm 0755 desktop/usr/local/bin/sway-inactive-window-transparency "$pkgdir/usr/local/bin/sway-inactive-window-transparency"
+    install -Dm 0755 desktop/usr/local/bin/sway-screenshare "$pkgdir/usr/local/bin/sway-screenshare"
+    install -Dm 0755 desktop/usr/local/bin/sway-screenshot-area "$pkgdir/usr/local/bin/sway-screenshot-area"
     install -Dm 0755 desktop/usr/local/bin/audio "$pkgdir/usr/local/bin/audio"
     install -Dm 0755 desktop/usr/local/bin/exit-wm "$pkgdir/usr/local/bin/exit-wm"
     install -Dm 0755 desktop/usr/local/bin/record-area "$pkgdir/usr/local/bin/record-area"
