--- a/conf/desktop/etc/systemd/user/swayidle.service
+++ b/conf/desktop/etc/systemd/user/swayidle.service
@@ -6,13 +6,11 @@ PartOf=graphical-session.target
 [Service]
 Type=simple
 ExecStart=/usr/bin/swayidle -w \
-    timeout 900 'hyprctl dispatch dpms off' \
-        resume 'hyprctl dispatch dpms on' \
-    timeout 1200 'exit-wm lock' \
-        resume 'hyprctl dispatch dpms on' \
-    timeout 1800 'systemctl -i suspend' \
-        resume 'hyprctl dispatch dpms on' \
-    before-sleep 'exit-wm lock'
+    timeout 900 swaylock \
+    timeout 1200 'swaymsg "output * dpms off"' \
+    timeout 1800 'swaymsg "output * dpms on"; sleep 1; systemctl suspend' \
+    resume 'swaymsg "output * dpms on"' \
+    before-sleep swaylock
 
 [Install]
-WantedBy=hyprland-session.target
+WantedBy=sway-session.target
