--- a/pkg/PKGBUILD
+++ b/pkg/PKGBUILD
@@ -1,7 +1,7 @@
 pkgbase='couldinho'
 pkgname=(couldinho-base couldinho-desktop couldinho-laptop couldinho-dev couldinho-sec couldinho-vmware couldinho-xcp-ng)
 pkgver=5
-pkgrel=5
+pkgrel=6
 pkgdesc="Packages for couldinho systems"
 arch=(x86_64)
 url="https://github.com/kontax/arch-packages"
@@ -584,7 +584,7 @@ package_couldinho-laptop() {
         pulseaudio-bluetooth    # Bluetooth module for pulseaudio
     )
 
-    install -Dm 0644 laptop/etc/xdg/waybar/config.patch "$pkgdir/etc/xdg/waybar/config.patch"
+    install -Dm 0644 laptop/etc/xdg/waybar/extra.conf "$pkgdir/etc/xdg/waybar/couldinho-laptop-extra.conf"
 
     # Display
     #depends+=(
