--- a/pkg/PKGBUILD
+++ b/pkg/PKGBUILD
@@ -1,7 +1,7 @@
 pkgbase='couldinho'
 pkgname=(couldinho-base couldinho-desktop couldinho-laptop couldinho-dev couldinho-sec couldinho-vmware couldinho-xcp-ng)
 pkgver=5
-pkgrel=14
+pkgrel=15
 pkgdesc="Packages for couldinho systems"
 arch=(x86_64)
 url="https://github.com/kontax/arch-packages"
@@ -275,6 +275,8 @@ package_couldinho-desktop() {
         "$pkgdir/etc/X11/xorg.conf.d/00-keyboard.conf"
     install -Dm 0644 desktop/etc/xdg/waybar/config \
         "$pkgdir/etc/xdg/waybar/couldinho-desktop-config"
+    install -Dm 0644 desktop/etc/xdg/waybar/extra.conf \
+        "$pkgdir/etc/xdg/waybar/couldinho-desktop-extra.conf"
     install -Dm 0644 desktop/etc/xdg/waybar/style.css \
         "$pkgdir/etc/xdg/waybar/couldinho-desktop-style.css"
     install -Dm 0644 desktop/etc/xdg/swaync/config.json \
