--- a/conf/desktop/etc/sway/config
+++ b/conf/desktop/etc/sway/config
@@ -168,8 +168,8 @@ bindsym --to-code {
     $hyper+p                     exec "wl-clipboard-manager lock; cglaunch rofi-pass; wl-clipboard-manager unlock"
     $win+p                       exec cgtoggle pass-gen
     $hyper+m                     exec cgtoggle udiskie-dmenu
-    $win+n                       exec cgtoggle rofi-nmcli
-    $win+grave                   exec cgtoggle wl-clipboard-manager dmenu
+    $hyper+n                       exec cgtoggle rofi-nmcli
+    $hyper+grave                   exec cgtoggle wl-clipboard-manager dmenu
     $hyper+Backspace             exec cgtoggle emoji-dmenu
     $hyper+XF86AudioLowerVolume  exec cgtoggle emoji-dmenu
     Print                        exec cglaunch sway-screenshot-area
@@ -180,16 +180,16 @@ bindsym --to-code {
     $win+q kill
 
     # Change focus
-    $win+h focus left
-    $win+j focus down
-    $win+k focus up
-    $win+l focus right
+    $hyper+h focus left
+    $hyper+j focus down
+    $hyper+k focus up
+    $hyper+l focus right
 
     # Move focused window
-    $win+Shift+h move left
-    $win+Shift+j move down
-    $win+Shift+k move up
-    $win+Shift+l move right
+    $hyper+Shift+h move left
+    $hyper+Shift+j move down
+    $hyper+Shift+k move up
+    $hyper+Shift+l move right
 
     # Enter fullscreen mode
     $hyper+f fullscreen
@@ -258,57 +258,57 @@ bindsym --to-code {
     $hyper+Tab exec swayr switch-to-urgent-or-lru-window
 
     # Switch to workspace using number row
-    $win+1 $workspace1
-    $win+2 $workspace2
-    $win+3 $workspace3
-    $win+4 $workspace4
-    $win+5 $workspace5
-    $win+6 $workspace6
-    $win+7 $workspace7
-    $win+8 $workspace8
-    $win+9 $workspace9
-    $win+0 $workspace0
+    $hyper+1 $workspace1
+    $hyper+2 $workspace2
+    $hyper+3 $workspace3
+    $hyper+4 $workspace4
+    $hyper+5 $workspace5
+    $hyper+6 $workspace6
+    $hyper+7 $workspace7
+    $hyper+8 $workspace8
+    $hyper+9 $workspace9
+    $hyper+0 $workspace0
 
     # Switch to workspace using keypad
-    $win+KP_1 $workspace1
-    $win+KP_2 $workspace2
-    $win+KP_3 $workspace3
-    $win+KP_4 $workspace4
-    $win+KP_5 $workspace5
-    $win+KP_6 $workspace6
-    $win+KP_7 $workspace7
-    $win+KP_8 $workspace8
-    $win+KP_9 $workspace9
-    $win+KP_0 $workspace0
+    $hyper+KP_1 $workspace1
+    $hyper+KP_2 $workspace2
+    $hyper+KP_3 $workspace3
+    $hyper+KP_4 $workspace4
+    $hyper+KP_5 $workspace5
+    $hyper+KP_6 $workspace6
+    $hyper+KP_7 $workspace7
+    $hyper+KP_8 $workspace8
+    $hyper+KP_9 $workspace9
+    $hyper+KP_0 $workspace0
 
     # Move window to workspace using number row
-    $win+Shift+1 move container to $workspace1
-    $win+Shift+2 move container to $workspace2
-    $win+Shift+3 move container to $workspace3
-    $win+Shift+4 move container to $workspace4
-    $win+Shift+5 move container to $workspace5
-    $win+Shift+6 move container to $workspace6
-    $win+Shift+7 move container to $workspace7
-    $win+Shift+8 move container to $workspace8
-    $win+Shift+9 move container to $workspace9
-    $win+Shift+0 move container to $workspace0
+    $win+1 move container to $workspace1
+    $win+2 move container to $workspace2
+    $win+3 move container to $workspace3
+    $win+4 move container to $workspace4
+    $win+5 move container to $workspace5
+    $win+6 move container to $workspace6
+    $win+7 move container to $workspace7
+    $win+8 move container to $workspace8
+    $win+9 move container to $workspace9
+    $win+0 move container to $workspace0
 
     # Move window to workspace using keypad
-    $win+Shift+KP_1 move container to $workspace1
-    $win+Shift+KP_2 move container to $workspace2
-    $win+Shift+KP_3 move container to $workspace3
-    $win+Shift+KP_4 move container to $workspace4
-    $win+Shift+KP_5 move container to $workspace5
-    $win+Shift+KP_6 move container to $workspace6
-    $win+Shift+KP_7 move container to $workspace7
-    $win+Shift+KP_8 move container to $workspace8
-    $win+Shift+KP_9 move container to $workspace9
-    $win+Shift+KP_0 move container to $workspace0
+    $win+KP_1 move container to $workspace1
+    $win+KP_2 move container to $workspace2
+    $win+KP_3 move container to $workspace3
+    $win+KP_4 move container to $workspace4
+    $win+KP_5 move container to $workspace5
+    $win+KP_6 move container to $workspace6
+    $win+KP_7 move container to $workspace7
+    $win+KP_8 move container to $workspace8
+    $win+KP_9 move container to $workspace9
+    $win+KP_0 move container to $workspace0
 
     # Modes
     $win+a mode $mode_audio
     $hyper+r mode $mode_resize
-    $win+e mode $mode_system
+    $hyper+e mode $mode_system
     $win+m mode $mode_workspaces_monitors
 }
 
