--- a/conf/desktop/etc/sway/config
+++ b/conf/desktop/etc/sway/config
@@ -165,7 +165,7 @@ bindsym --to-code {
     # Launcher
     $hyper+equal                 exec cgtoggle qalculate-gtk
     $hyper+d                     exec cgtoggle rofi -modi drun -show drun
-    $hyper+p                     exec "wl-clipboard-manager lock; cglaunch rofi-pass; wl-clipboard-manager unlock"
+    $hyper+p                     exec "wl-clipboard-manager lock; cglaunch passmenu -p pass; wl-clipboard-manager unlock"
     $win+p                       exec cgtoggle pass-gen
     $hyper+m                     exec cgtoggle udiskie-dmenu
     $hyper+n                       exec cgtoggle rofi-nmcli
