--- a/conf/laptop/etc/xdg/waybar/extra.conf
+++ b/conf/laptop/etc/xdg/waybar/extra.conf
@@ -20,7 +20,7 @@
         "on-click": "rofi-bluetooth",
         "format-disconnected": " <span foreground='#928374'></span> ",
         "tooltip-format": "{ifname}: {ipaddr}/{cidr}\n {bandwidthDownBits}\n {bandwidthUpBits}",
-        "on-click": "rofi-nmcli"
+        "on-click": "dmenu-nmcli"
     }
 }
 
