--- a/conf/desktop/etc/xdg/waybar/config
+++ b/conf/desktop/etc/xdg/waybar/config
@@ -131,7 +131,7 @@
         "format-linked": "<span foreground='#928374'></span> {ifname}",
         "format-disconnected": " <span foreground='#928374'></span> ",
         "tooltip-format": "{ifname}: {ipaddr}/{cidr}\n {bandwidthDownBits}\n {bandwidthUpBits}",
-        "on-click": "rofi-nmcli"
+        "on-click": "dmenu-nmcli"
     },
     "pulseaudio": {
         "format": "<span foreground='#928374'>{icon}</span> {volume}%   {format_source}",
