--- a/pkg/PKGBUILD
+++ b/pkg/PKGBUILD
@@ -1,7 +1,7 @@
 pkgbase='couldinho'
 pkgname=(couldinho-base couldinho-desktop couldinho-laptop couldinho-dev couldinho-sec couldinho-vmware couldinho-xcp-ng)
 pkgver=5
-pkgrel=27
+pkgrel=29
 pkgdesc="Packages for couldinho systems"
 arch=(x86_64)
 url="https://github.com/kontax/arch-packages"
@@ -576,12 +576,13 @@ package_couldinho-laptop() {
         tlp                     # Power management
     )
 
-    # Network + Bluetooth
+    # Network + Bluetooth / Audio
     depends+=(
         iwd                     # Internet wireless daemon
         bluez                   # Bluetooth daemons
         bluez-utils             # Utils for bluez
         pulseaudio-bluetooth    # Bluetooth module for pulseaudio
+        sof-firmware            # Sound Open Firmware
     )
 
     install -Dm 0644 laptop/etc/xdg/waybar/extra.conf "$pkgdir/etc/xdg/waybar/couldinho-laptop-extra.conf"
