--- a/pkg/PKGBUILD
+++ b/pkg/PKGBUILD
@@ -1,7 +1,7 @@
 pkgbase='couldinho'
 pkgname=(couldinho-base couldinho-desktop couldinho-laptop couldinho-dev couldinho-sec couldinho-vmware couldinho-xcp-ng)
 pkgver=5
-pkgrel=33
+pkgrel=34
 pkgdesc="Packages for couldinho systems"
 arch=(x86_64)
 url="https://github.com/kontax/arch-packages"
@@ -471,7 +471,7 @@ package_couldinho-dev() {
 
     # Cloud
     depends+=(
-        aws-cli                 # Command line interface to AWS
+        aws-cli-v2-bin          # Command line interface to AWS
         npm                     # Node package manager (used for serverless)
     )
 
