--- a/pkg/PKGBUILD
+++ b/pkg/PKGBUILD
@@ -1,7 +1,7 @@
 pkgbase='couldinho'
 pkgname=(couldinho-base couldinho-desktop couldinho-laptop couldinho-dev couldinho-sec couldinho-vmware couldinho-xcp-ng)
 pkgver=5
-pkgrel=34
+pkgrel=35
 pkgdesc="Packages for couldinho systems"
 arch=(x86_64)
 url="https://github.com/kontax/arch-packages"
@@ -472,6 +472,7 @@ package_couldinho-dev() {
     # Cloud
     depends+=(
         aws-cli-v2-bin          # Command line interface to AWS
+        aws-sam-cli-bin         # CLI tool for interfacing with AWS SAM
         npm                     # Node package manager (used for serverless)
     )
 
