--- a/pkg/PKGBUILD
+++ b/pkg/PKGBUILD
@@ -1,7 +1,7 @@
 pkgbase='couldinho'
 pkgname=(couldinho-base couldinho-desktop couldinho-laptop couldinho-dev couldinho-sec couldinho-vmware couldinho-xcp-ng)
 pkgver=5
-pkgrel=35
+pkgrel=36
 pkgdesc="Packages for couldinho systems"
 arch=(x86_64)
 url="https://github.com/kontax/arch-packages"
@@ -505,6 +505,7 @@ package_couldinho-sec() {
         wireshark-cli           # Network analyzer - CLI tools
         wireshark-qt            # Network analyzer - GUI
         burpsuite               # Security testing web applications
+        caido-desktop           # Lightweight Web Security tool
         dirbuster               # Brute force directories and filenames
         wfuzz                   # Brute force web applications
     )
