--- a/pkg/PKGBUILD
+++ b/pkg/PKGBUILD
@@ -1,7 +1,7 @@
 pkgbase='couldinho'
 pkgname=(couldinho-base couldinho-desktop couldinho-laptop couldinho-dev couldinho-sec couldinho-vmware couldinho-xcp-ng)
 pkgver=5
-pkgrel=40
+pkgrel=41
 pkgdesc="Packages for couldinho systems"
 arch=(x86_64)
 url="https://github.com/kontax/arch-packages"
@@ -533,8 +533,9 @@ package_couldinho-sec() {
     # Reversing
     depends+=(
         radare2                 # Command line reverse engineering framework
-        ida-free                # Hexrays reversen engineering framework
+        ida-free                # Hexrays reverse engineering framework
         ghidra                  # Reverse engineering framework similar to IDA
+        binaryninja-free        # Free version of the binary ninja analysis tool
         python-capstone         # GEF optional dependency
         python-unicorn          # GEF optional dependency
         python-keystone         # GEF optional dependency
