--- a/pkg/PKGBUILD
+++ b/pkg/PKGBUILD
@@ -1,7 +1,7 @@
 pkgbase='couldinho'
 pkgname=(couldinho-base couldinho-desktop couldinho-laptop couldinho-dev couldinho-sec couldinho-vmware couldinho-xcp-ng)
 pkgver=5
-pkgrel=43
+pkgrel=44
 pkgdesc="Packages for couldinho systems"
 arch=(x86_64)
 url="https://github.com/kontax/arch-packages"
@@ -541,6 +541,7 @@ package_couldinho-sec() {
         python-keystone         # GEF optional dependency
         ropper                  # ROP gadget searching tool
         python-r2pipe           # Allow GDB to decompile using Ghidra engine
+        r2ghidra                # Allow GDB to decompile using Ghidra engine
     )
 
     # Cracking
