--- a/pkg/PKGBUILD
+++ b/pkg/PKGBUILD
@@ -1,7 +1,7 @@
 pkgbase='couldinho'
 pkgname=(couldinho-base couldinho-desktop couldinho-laptop couldinho-dev couldinho-sec couldinho-vmware couldinho-xcp-ng)
 pkgver=5
-pkgrel=51
+pkgrel=52
 pkgdesc="Packages for couldinho systems"
 arch=(x86_64)
 url="https://github.com/kontax/arch-packages"
@@ -428,6 +428,8 @@ package_couldinho-desktop() {
     install -Dm 0755 desktop/usr/local/bin/waybar-usbguard "$pkgdir/usr/local/bin/waybar-usbguard"
     install -Dm 0755 desktop/usr/local/bin/waybar-vpn "$pkgdir/usr/local/bin/waybar-vpn"
     install -Dm 0755 desktop/usr/local/bin/waybar-yubikey "$pkgdir/usr/local/bin/waybar-yubikey"
+    install -Dm 0755 desktop/usr/local/bin/wireguard-status "$pkgdir/usr/local/bin/wireguard-status"
+    install -Dm 0755 desktop/usr/local/bin/wireguard-toggle "$pkgdir/usr/local/bin/wireguard-toggle"
     install -Dm 0755 desktop/usr/local/bin/sway-audio "$pkgdir/usr/local/bin/sway-audio"
     install -Dm 0755 desktop/usr/local/bin/sway-autoname-workspaces "$pkgdir/usr/local/bin/sway-autoname-workspaces"
     install -Dm 0755 desktop/usr/local/bin/sway-exit "$pkgdir/usr/local/bin/sway-exit"
