--- a/pkg/PKGBUILD
+++ b/pkg/PKGBUILD
@@ -1,7 +1,7 @@
 pkgbase='couldinho'
 pkgname=(couldinho-base couldinho-desktop couldinho-laptop couldinho-dev couldinho-sec couldinho-vmware couldinho-xcp-ng)
 pkgver=5
-pkgrel=52
+pkgrel=53
 pkgdesc="Packages for couldinho systems"
 arch=(x86_64)
 url="https://github.com/kontax/arch-packages"
@@ -257,8 +257,10 @@ package_couldinho-desktop() {
         slurp                   # Region selector for wayland
         swaync                  # Sway notification daemon
         libnotify               # Desktop notification library
-        fuzzel                   # Launcher
+        fuzzel                  # Launcher
         swayr                   # Window switcher for sway
+        wdisplays               # GUI Monitor location configuration
+        kanshi                  # Persistent output profiles for hotplug
     )
 
     install -Dm 0644 desktop/etc/sway/config \
