sway: exec kanshi on startup

--- a/conf/desktop/etc/sway/config
+++ b/conf/desktop/etc/sway/config
@@ -315,4 +315,4 @@ bindsym --to-code {
 
 include @sysconfdir@/sway/config.d/*
 exec "systemctl --user import-environment; systemctl --user start sway-session.target"
-exec_always kanshi
+exec_always pkill kanshi; exec kanshi
